--- a/index.html
+++ b/index.html
@@ -46,21 +46,32 @@
 	</head>
 
 	<body>
-		<div class="floating-box">
-			<img class="logo" src="dist/img/logo.png" alt="Circus Logo" />
-			<div class="foreground">
-				<h1>Hello World!</h1>
-				<p>Yep, you've got the Circus Starter project working.</p>
-				<p>Congratulations! You're ready to code.</p>
-				<p class="github">
-					<a target="_blank" rel="noopener" href="https://github.com/CreativeCircus/circus-starter"
-						>https://github.com/CreativeCircus/circus-starter</a
-					>
-				</p>
-				<code>1.10.0</code>
+		<header class="hero">
+			<div class="nav-bar">
+				<a href="#" class="logo"><img src="http://www.w3.org/2000/svg" alt="tesla logo"></a>
+				<nav>
+					<ul class="nav-products">
+						<li><a href="">Model S</a></li>
+						<li><a href="">Model 3</a></li>
+						<li><a href="">Model X</a></li>
+						<li><a href="">Model Y</a></li>
+						<li><a href="">Solar Roof</a></li>
+						<li><a href="">Solar Panels</a></li>
+					</ul>
+					<ul class="nav-menu">
+						<li><a href="">Shop</a></li>
+						<li><a href="">Account</a></li>
+						<li><a href="">Menu</a></li>
+					</ul>
+				</nav>
 			</div>
-			<div class="background"></div>
-		</div>
+			<div class="container">
+				<h1 class="main-text">CYBERTRUCK</h1>
+				<p>BETTER UTILITY THAN A TRUCK WITH MORE PERFORMANCE THAN A SPORTS CAR
+				</p>
+				<a href="" class="btn">ORDER NOW</a>
+			</div>
+		</header>
 
 		<script src="dist/js/main.js"></script>
 	</body>
