--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<title>¯\_(ツ)_/¯</title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 
 		<link rel="stylesheet" href="dist/css/main.css" />
 
@@ -47,9 +50,9 @@
 
 	<body>
 		<header class="hero">
-			<div class="nav-bar">
-				<a href="#" class="logo"><img src="http://www.w3.org/2000/svg" alt="tesla logo"></a>
-				<nav>
+			<!-- <div class="nav-bar"> -->
+				<a href="#" class="logo"><img src="/src/img/tesla-logo.webp" alt="tesla logo"></a>
+				<!-- <nav>
 					<ul class="nav-products">
 						<li><a href="">Model S</a></li>
 						<li><a href="">Model 3</a></li>
@@ -63,15 +66,59 @@
 						<li><a href="">Account</a></li>
 						<li><a href="">Menu</a></li>
 					</ul>
-				</nav>
-			</div>
+				</nav> -->
+			<!-- </div> -->
 			<div class="container">
-				<h1 class="main-text">CYBERTRUCK</h1>
-				<p>BETTER UTILITY THAN A TRUCK WITH MORE PERFORMANCE THAN A SPORTS CAR
+				<h1 class="title">CYBERTRUCK</h1>
+				<p class="sub-heading">BETTER UTILITY THAN A TRUCK WITH MORE PERFORMANCE THAN A SPORTS CAR
 				</p>
 				<a href="" class="btn">ORDER NOW</a>
 			</div>
 		</header>
+
+		<main>
+			<section class="products">
+				<div class="container">
+					<h2 class="section-title">INFORMATION</h2>
+
+					<article class="product">
+						<img src="/src/img/exoskeleton.avif" alt="exoskeleton" class="product-image">
+						<h3 class="product-title">EXOSKELETON</h3>
+						<p class="product-description">Cybertruck is built with an exterior shell made for
+						ultimate durability and passenger protection. Starting with a nearly impenetrable
+						exoskeleton, every component is designed for superior strength and endurance, from
+						Ultra-Hard 30X Cold-Rolled stainless-steel structural skin to Tesla armor glass.</p>
+						<a href="" class="btn">more info</a>
+					</article>
+
+					<article class="product">
+						<img src="/src/img/ultra-hard.avif" alt="ultra hard" class="product-image">
+						<h3 class="product-title">ULTRA-HARD 30X COLD-ROLLED STAINLESS STEEL</h3>
+						<p class="product-description">If there was something better, we’d use it. Help eliminate dents, damage and
+							long-term corrosion with a smooth monochrome exoskeleton that puts the shell on
+							the outside of the car and provides you and your passengers maximum protection.</p>
+						<a href="" class="btn">more info</a>
+					</article>
+					
+					<article class="product">
+						<img src="/src/img/armor-glass.avif" alt="armor glass" class="product-image">
+						<h3 class="product-title">TESLA ARMOR GLASS</h3>
+						<p class="product-description">Ultra-strong glass and polymer-layered composite can absorb and redirect impact
+							force for improved performance and damage tolerance.</p>
+						<a href="" class="btn">more info</a>
+					</article>
+
+					<article class="product">
+						<img src="/src/img/versatility.avif" alt="versatility" class="product-image">
+						<h3 class="product-title">VERSATILE UTILITY</h3>
+						<p class="product-description">From rugged to refined, Cybertruck is completely
+							adaptable for your needs. Prepare for every experience with a versatile
+							utilitarian design — including on-board power and compressed air.</p>
+						<a href="" class="btn">more info</a>
+					</article>
+				</div>
+			</section>
+		</main>
 
 		<script src="dist/js/main.js"></script>
 	</body>
