--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 	</head>
 
 	<body>
-		<header class="hero">
+		<header class="hero hero-animation">
 			<!-- <div class="nav-bar"> -->
-				<a href="#" class="logo"><img src="/src/img/tesla-logo.webp" alt="tesla logo"></a>
+				<a href="" class="logo"><img src="dist/img/tesla-logo.webp" alt="tesla logo"></a>
 				<!-- <nav>
 					<ul class="nav-products">
 						<li><a href="">Model S</a></li>
@@ -72,7 +72,7 @@
 				<h1 class="title">CYBERTRUCK</h1>
 				<p class="sub-heading">BETTER UTILITY THAN A TRUCK WITH MORE PERFORMANCE THAN A SPORTS CAR
 				</p>
-				<a href="" class="btn">ORDER NOW</a>
+				<a href="" class="btn order">ORDER NOW</a>
 			</div>
 		</header>
 
@@ -81,8 +81,8 @@
 				<div class="container">
 					<h2 class="section-title">INFORMATION</h2>
 
-					<article class="product">
-						<img src="/src/img/exoskeleton.avif" alt="exoskeleton" class="product-image">
+					<article class="product exo">
+						<img src="dist/img/exoskeleton.png" alt="exoskeleton" class="exoskeleton">
 						<h3 class="product-title">EXOSKELETON</h3>
 						<p class="product-description">Cybertruck is built with an exterior shell made for
 						ultimate durability and passenger protection. Starting with a nearly impenetrable
@@ -91,8 +91,8 @@
 						<a href="" class="btn">more info</a>
 					</article>
 
-					<article class="product">
-						<img src="/src/img/ultra-hard.avif" alt="ultra hard" class="product-image">
+					<article class="product ultra">
+						<img src="dist/img/ultra-hard.png" alt="ultra hard" class="ultra-hard">
 						<h3 class="product-title">ULTRA-HARD 30X COLD-ROLLED STAINLESS STEEL</h3>
 						<p class="product-description">If there was something better, we’d use it. Help eliminate dents, damage and
 							long-term corrosion with a smooth monochrome exoskeleton that puts the shell on
@@ -100,16 +100,16 @@
 						<a href="" class="btn">more info</a>
 					</article>
 					
-					<article class="product">
-						<img src="/src/img/armor-glass.avif" alt="armor glass" class="product-image">
+					<article class="product armor">
+						<img src="dist/img/armor-glass.png" alt="armor glass" class="armor-glass">
 						<h3 class="product-title">TESLA ARMOR GLASS</h3>
 						<p class="product-description">Ultra-strong glass and polymer-layered composite can absorb and redirect impact
 							force for improved performance and damage tolerance.</p>
 						<a href="" class="btn">more info</a>
 					</article>
 
-					<article class="product">
-						<img src="/src/img/versatility.avif" alt="versatility" class="product-image">
+					<article class="product versatile">
+						<img src="dist/img/versatility.png" alt="versatility" class="versatility">
 						<h3 class="product-title">VERSATILE UTILITY</h3>
 						<p class="product-description">From rugged to refined, Cybertruck is completely
 							adaptable for your needs. Prepare for every experience with a versatile
@@ -119,7 +119,8 @@
 				</div>
 			</section>
 		</main>
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
 		<script src="dist/js/main.js"></script>
 	</body>
 </html>
